# trading-framework

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  backtest_gap.py  backtest_intraday.py  config.yaml  dashboard.py  fetch_universe.py  india_intraday_model.py  main.py  ml_model.py  pyproject.toml  requirements.txt  simulate_day.py  start_ui.sh  test_stock.py
2.0/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
2.0/dashboard/: .gitignore  README.md  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  tailwind.config.ts
2.0/dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
2.0/dashboard/app/pms/[id]/: page.tsx
2.0/dashboard/components/: dashboard-overview.tsx  event-ticker.tsx  pm-detail.tsx
2.0/dashboard/components/ui/: badge.tsx  button.tsx  card.tsx
2.0/dashboard/lib/: api.ts  utils.ts
2.0/infra/: docker-compose.yml
2.0/infra/postgres/: init.sql
2.0/plan/: 00-FRAMEWORK.md  01-KEYSTONE.md  HANDOFF.md
2.0/scripts/: smoke_llm.py
2.0/src/agora/: __init__.py
2.0/src/agora/apps/: __init__.py
2.0/src/agora/apps/propfirm/: README.md  __init__.py
2.0/src/agora/apps/propfirm/data/: __init__.py  nse.py
2.0/src/agora/apps/propfirm/seed_strategies/: __init__.py  momentum_backtest.py  momentum_v1.py  signals.py
2.0/src/agora/platform/: __init__.py  cli.py
2.0/src/agora/platform/control_plane/: __init__.py  app.py  event_bus.py  health.py  mode.py  mode_loader.py  mode_loop.py  pm_provision.py  pm_repo.py  state.py  trade_repo.py
2.0/src/agora/platform/llm/: __init__.py  budget.py  client.py  cost.py
2.0/src/agora/platform/memory/: __init__.py
2.0/src/agora/platform/observability/: __init__.py  logging.py
2.0/src/agora/platform/shared/: __init__.py  journal.py  settings.py
2.0/src/agora/platform/tools/: __init__.py  broker.py
2.0/src/agora/platform/workers/: __init__.py  _http.py  _market_data.py  _pool.py  hello.py  main.py  pm_supervisor.py
2.0/tests/: _e2e_workflow_module.py  test_alembic_roundtrip.py  test_broker.py  test_budget.py  test_cli.py  test_cost.py  test_e2e_workflow_with_budget.py  test_eod.py  test_event_bus.py  test_health.py  test_heartbeat_retry_policy.py  test_hello_workflow.py  test_internal_events.py  test_journal.py  test_kill_switch_cache.py  test_kill_switch_endpoints.py  test_llm_client.py  test_market_data.py  test_market_data_singleton.py  test_mode_controller.py  test_mode_flip_journal.py  test_mode_loader.py  test_momentum_signal.py  test_momentum_v1.py  test_pm_crash_recovery.py  test_pm_provision.py  test_pm_repo.py  test_pm_supervisor.py  test_pms_endpoints.py  test_propfirm_engine.py  test_settings.py  test_smoke.py  test_smoke_script.py  test_trade_repo.py  test_trading_cycle.py  test_workers_http.py  test_ws_stream.py
(+345 files in other folders)
