[project]
name = "agora"
version = "0.0.1"
description = "AGORA — platform for autonomous agent organizations."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "AGORA" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "httpx>=0.28,<0.29",
    "asyncpg>=0.30,<0.31",
    "psycopg[binary]>=3.2,<4",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "alembic>=1.14,<2",
    "temporalio==1.9.0",
    "litellm>=1.55,<2",
    "langfuse>=2.50,<3",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "loguru>=0.7,<0.8",
    "tyro>=0.9,<0.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<0.26",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<0.9",
    "mypy>=1.13,<2",
    "hypothesis>=6.122,<7",
    "testcontainers[postgres]>=4.9,<5",
    "pre-commit>=4.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agora"]

[tool.hatch.build.targets.sdist]
include = ["src/agora"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
# Defaults — ruff format replaces black.

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/agora", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["litellm.*", "temporalio.*", "langfuse.*", "testcontainers.*", "asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
markers = [
    "slow: marks tests as slow (use -m 'not slow' to skip)",
]

[tool.coverage.run]
source = ["src/agora"]
